--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
 :root {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arimo, League "Franklin Gothic Medium", "Arial Narrow", Arial,
+		sans-serif;
 }
